# simple-db

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  LICENSE  README.md  meson.build  test_page.db
docs/: btree-design.md  page-management-redesign.md  record-encoding-plan.md  schema-record-design.md
include/: alloc.h  btree.h  btree_old.h  bufpool.h  catalog.h  cqueue.h  dblock.h  gdt_page.h  page.h  pagestore.h  record.h  rwsxlock.h  schema.h  shtable.h  slot.h  type.h  utils.h
old/include/: btree.h
old/src/: btree.c  dblock.c  gdt_page.c  schema.c
old/tests/: test_gdt_page.c
src/: alloc.c  btree.c  bufpool.c  catalog.c  cqueue.c  dblock.c  gdt_page.c  meson.build  page.c  pagestore.c  record.c  rwsxlock.c  schema.c  shtable.c  slot.c  type.c  utils.c
tests/: meson.build  test_alloc.c  test_btree.c  test_bufpool.c  test_catalog.c  test_dblock.c  test_page.c  test_pagestore.c  test_record.c  test_record_enc.c  test_rwsxlock.c  test_slot.c
